# news-sentiment-crawler-ger

./: .gitignore  Dockerfile.api  Dockerfile.crawler  LICENSE  README.md  docker-compose.yaml  flake.nix  local.env  main.py  pyproject.toml  requirements.txt  sentiment.py
.github/workflows/: ci.yaml
api/: Dockerfile  main.py  requirements.txt
crawler/: Dockerfile  api.py  appconfig.py  article.py  main.py  newssite.py  parser.py  requirements.txt  sentiment.py  storage.py
src/crawler/: api.py  article.py  main.py  newssite.py  sentiment.py  storage.py
